force-app/main/default/objects/TRL_Case_Priorization_Event__e/TRL_Case_Priorization_Event__e.object-meta.xml
<CustomObject>
    <description>#W-8097697 TRL Priorization thoeger@mulesoft.com</description>
    <label>TRL_Case_Priorization_Event</label>
    <pluralLabel>TRL_Case_Priorization_Events</pluralLabel>
</CustomObject>