force-app/main/default/objects/TRL_Case_Priorization_Event__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Case.AccountId</description>
    <label>AccountId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>