force-app/main/default/objects/TRL_Case_Priorization_Event__e/fields/AccountRegion__c.field-meta.xml
<CustomField>
    <fullName>AccountRegion__c</fullName>
    <description>Account.Region__c</description>
    <label>AccountRegion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>