force-app/main/default/objects/TRL_Case_Priorization_Event__e/fields/AccountTerritory__c.field-meta.xml
<CustomField>
    <fullName>AccountTerritory__c</fullName>
    <description>Account.Territory__c</description>
    <label>AccountTerritory</label>
    <length>20</length>
    <type>Text</type>
</CustomField>