force-app/main/default/objects/TRL_Case_Priorization_Event__e/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <label>CaseID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>